Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:32+0200\n"
+"PO-Revision-Date: 2010-05-29 13:33+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1235,7 +1235,7 @@ msgstr "sob"
 #. l10n: Minimal week day name
 #: js/messages.php:148
 msgid "Su"
-msgstr "Ne"
+msgstr "ne"
 
 #. l10n: Minimal week day name
 #: js/messages.php:150
