Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -1260,7 +1260,7 @@ msgstr "če"
 #. l10n: Minimal week day name
 #: js/messages.php:158
 msgid "Fr"
-msgstr "Pe"
+msgstr "pe"
 
 #. l10n: Minimal week day name
 #: js/messages.php:160
