--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:31+0200\n"
+"PO-Revision-Date: 2010-05-29 13:33+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -884,7 +884,7 @@ msgstr ""
 #: import.php:403 sql.php:626
 #, php-format
 msgid "Bookmark %s created"
-msgstr ""
+msgstr "تم إنشاء العلامة المرجعية %s"
 
 #: import.php:409 import.php:415
 #, php-format
