--- a/po/sl.po
+++ b/po/sl.po
@@ -1265,7 +1265,7 @@ msgstr "pe"
 #. l10n: Minimal week day name
 #: js/messages.php:160
 msgid "Sa"
-msgstr "So"
+msgstr "so"
 
 #. l10n: Column header for week of the year in calendar
 #: js/messages.php:162
