Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -1110,7 +1110,7 @@ msgstr "أكتوبر"
 
 #: js/messages.php:92
 msgid "November"
-msgstr ""
+msgstr "نوفمبر"
 
 #: js/messages.php:93
 msgid "December"
