Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -1213,7 +1213,7 @@ msgstr "الجمعة"
 
 #: js/messages.php:128
 msgid "Saturday"
-msgstr ""
+msgstr "السبت"
 
 #. l10n: Short week day name
 #: js/messages.php:132 libraries/common.lib.php:1580
