Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:39+0200\n"
+"PO-Revision-Date: 2010-05-29 13:40+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -1307,7 +1307,7 @@ msgstr "الأسبوع"
 
 #: js/messages.php:164
 msgid "Hour"
-msgstr ""
+msgstr "الساعة"
 
 #: js/messages.php:165
 #, fuzzy
