Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:39+0200\n"
+"PO-Revision-Date: 2010-05-29 13:44+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2504,6 +2504,9 @@ msgid ""
 "than using the key cache by the amount specified here, prefer the key cache "
 "method."
 msgstr ""
+"Če bi bila začasna datoteka, uporabljena za hitro ustvarjanje indeksa "
+"MyISAM, večja kot uporabljena vrednost predpomnilnika ključev določena "
+"tukaj, raje izberite način predpomnilnika ključev."
 
 #: libraries/engines/myisam.lib.php:42
 msgid "Repair threads"
