Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:44+0200\n"
+"PO-Revision-Date: 2010-05-29 13:50+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2547,7 +2547,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:28
 msgid "Record cache size"
-msgstr ""
+msgstr "Velikost predpomnilnika zapisov"
 
 #: libraries/engines/pbxt.lib.php:29
 msgid ""
