--- a/po/sl.po
+++ b/po/sl.po
@@ -2558,7 +2558,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:33
 msgid "Log cache size"
-msgstr ""
+msgstr "Velikost predpomnilnika dnevnika"
 
 #: libraries/engines/pbxt.lib.php:34
 msgid ""
