--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:43+0200\n"
+"PO-Revision-Date: 2010-05-29 13:51+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -1471,7 +1471,7 @@ msgstr ""
 
 #: libraries/Table.class.php:1033 tbl_get_field.php:26
 msgid "Invalid table name"
-msgstr ""
+msgstr "اسم الجدول غير صالح"
 
 #: libraries/Table.class.php:1048
 #, php-format
