--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:50+0200\n"
+"PO-Revision-Date: 2010-05-29 13:53+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2565,6 +2565,9 @@ msgid ""
 "The amount of memory allocated to the transaction log cache used to cache on "
 "transaction log data. The default is 16MB."
 msgstr ""
+"Količina spomina dodeljenega predpomnilniku dnevnika transakcij, ki se "
+"uporablja za predpomnjenje ob podatkih dnevnika transakcij. Privzeto je 16 "
+"MB."
 
 #: libraries/engines/pbxt.lib.php:38
 msgid "Log file threshold"
