--- a/po/sl.po
+++ b/po/sl.po
@@ -2571,7 +2571,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:38
 msgid "Log file threshold"
-msgstr ""
+msgstr "Omejitev dnevniške datoetke"
 
 #: libraries/engines/pbxt.lib.php:39
 msgid ""
