Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:52+0200\n"
+"PO-Revision-Date: 2010-05-29 13:53+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -1481,7 +1481,7 @@ msgstr ""
 #: libraries/Table.class.php:1132
 #, php-format
 msgid "Table %s has been renamed to %s"
-msgstr "تم تغيير اسمهم إلى %s  جدول%s"
+msgstr "تم إعادة تسمية الجدول %s إلى %s"
 
 #: libraries/Theme.class.php:162
 #, php-format
