Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:54+0200\n"
+"PO-Revision-Date: 2010-05-29 13:57+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -1563,7 +1563,7 @@ msgstr ""
 
 #: libraries/auth/cookie.auth.lib.php:258
 msgid "Server:"
-msgstr "خادم السجل"
+msgstr "الخادم:"
 
 #: libraries/auth/cookie.auth.lib.php:263
 msgid "Username:"
