--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:00+0200\n"
+"PO-Revision-Date: 2010-05-29 14:02+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3571,6 +3571,8 @@ msgstr "Količina do zdaj zapisanih podatkov, v bajtih."
 #: libraries/messages.inc.php:104
 msgid "The number of pages that have been written for doublewrite operations."
 msgstr ""
+"Število strani, ki so bile zapisane za posege dvojnega pisanja "
+"(doublewrite)."
 
 #: libraries/messages.inc.php:105
 msgid "The number of doublewrite operations that have been performed."
