--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:00+0200\n"
+"PO-Revision-Date: 2010-05-29 14:02+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -1623,7 +1623,7 @@ msgstr ""
 
 #: libraries/blobstreaming.lib.php:689
 msgid "View image"
-msgstr "عرض الصورة"
+msgstr "اعرض الصورة"
 
 #: libraries/blobstreaming.lib.php:693
 msgid "Play audio"
