Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:02+0200\n"
+"PO-Revision-Date: 2010-05-29 14:04+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -1682,8 +1682,8 @@ msgid ""
 "The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
 "configuration file!"
 msgstr ""
-"المتغير <span dir=\"ltr\"><tt>$cfg['PmaAbsoluteUri']</tt></span> يجب تعديله "
-"في ملف الكوفيك !"
+"المتغير <span dir=\"ltr\"><tt>$cfg['PmaAbsoluteUri']</tt></span> يجب تعديله في "
+"ملف التعريف !"
 
 #: libraries/common.inc.php:629
 #, php-format
