Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:04+0200\n"
+"PO-Revision-Date: 2010-05-29 14:07+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -1756,7 +1756,7 @@ msgstr "تخطي شرح SQL"
 
 #: libraries/common.lib.php:1212
 msgid "Without PHP Code"
-msgstr "بدون شيفرة PHP"
+msgstr "بدون كود PHP"
 
 #: libraries/common.lib.php:1215 setup/lib/messages.inc.php:355
 msgid "Create PHP Code"
