Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:02+0200\n"
+"PO-Revision-Date: 2010-05-29 14:08+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3583,6 +3583,8 @@ msgid ""
 "The number of waits we had because log buffer was too small and we had to "
 "wait for it to be flushed before continuing."
 msgstr ""
+"Število čakanj, ki smo jih imeli, ker je bil medpomnilnik dnevnika premajhen "
+"in je bilo potrebno počakati, da se pred nadaljevanjem izplakne."
 
 #: libraries/messages.inc.php:107
 msgid "The number of log write requests."
