--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:16+0200\n"
+"PO-Revision-Date: 2010-05-29 14:17+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3851,7 +3851,7 @@ msgstr ""
 
 #: libraries/messages.inc.php:160
 msgid "The number of sorts that were done with ranges."
-msgstr ""
+msgstr "Število razvrščanj, ki so bila storjena z razponi."
 
 #: libraries/messages.inc.php:161
 msgid "The number of sorted rows."
