Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:19+0200\n"
+"PO-Revision-Date: 2010-05-29 14:25+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4627,6 +4627,13 @@ msgid ""
 "documentation for PHP's strftime() function and for \"utc\" it is done using "
 "gmdate() function."
 msgstr ""
+"Prikaže polje TIME, TIMESTAMP, DATETIME ali številski časovni žig unix kot "
+"oblikovan datum. Prva možnost je odmik (v urah), ki bo dodan časovnemu žigu "
+"(privzeto: 0). Uporabite drugo možnost za določitev različnega niza oblike "
+"datuma/časa. Tretja možnost določa, ali želite videti lokalni datum ali UTF "
+"(uporabite niza \"local\" ali \"utf\"). V skladu s tem ima oblika datuma "
+"različne vrednosti – za \"local\" si oglejte dokumentacijo za PHP-jevo "
+"funkcijo strftime() in za \"utf\" se uporablja funkcija gmdate()."
 
 #: libraries/transformations/text_plain__external.inc.php:10
 msgid ""
