Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:25+0200\n"
+"PO-Revision-Date: 2010-05-29 14:26+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5443,6 +5443,8 @@ msgstr "Ne morem se povezati z glavnim strežnikom %s."
 msgid ""
 "Unable to read master log position. Possible privilege problem on master."
 msgstr ""
+"Ne morem prebrati položaja dnevnika glavnega strežnika. Možne težave s "
+"privilegiji na glavnem strežniku."
 
 #: server_replication.php:71
 msgid "Unable to change master"
