Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:26+0200\n"
+"PO-Revision-Date: 2010-05-29 14:27+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5458,6 +5458,7 @@ msgstr "Glavni strežnik je uspešno spremenjen v %s"
 #: server_replication.php:182
 msgid "This server is configured as master in a replication process."
 msgstr ""
+"Ta strežnik je konfiguriran kot glavni strežnik v postopku podvojevanja."
 
 #: server_replication.php:184 server_status.php:281
 msgid "Show master status"
