Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:29+0200\n"
+"PO-Revision-Date: 2010-05-29 14:33+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5489,6 +5489,11 @@ msgid ""
 "ignore all databases by default and allow only certain databases to be "
 "replicated. Please select the mode:"
 msgstr ""
+"Ta strežnik ni konfiguriran kot glavni strežnik v postopku podvojevanja. "
+"Izbirate lahko med ali podvojevanjem vseh zbirk podatkov in prezrtjem "
+"nekaterih (uporabno, če želite podvojiti večino zbirk podatkov) ali "
+"prezrtjem vseh zbirk podatkov po privzetem in podvojitvijo samo določenih "
+"zbirk podatkov. Prosimo, izberite način:"
 
 #: server_replication.php:221
 msgid "Replicate all databases; Ignore:"
