Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:33+0200\n"
+"PO-Revision-Date: 2010-05-29 14:46+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5524,7 +5524,7 @@ msgstr ""
 
 #: server_replication.php:293
 msgid "Slave SQL Thread not running!"
-msgstr ""
+msgstr "Podrejenčeva nit SQL ni zagnana!"
 
 #: server_replication.php:296
 msgid "Slave IO Thread not running!"
