Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:50+0200\n"
+"PO-Revision-Date: 2010-05-29 14:51+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5521,6 +5521,9 @@ msgid ""
 "should see a message informing you, that this server <b>is</b> configured as "
 "master"
 msgstr ""
+"Ko enkrat ponovno zažetene strežnik MySQL, prosimo, kliknite na gumb Pojdi. "
+"Nato bi morali videti sporočilo, ki vam sporoča, da ta strežnik <b>je</b> "
+"konfiguriran kot glavni strežnik"
 
 #: server_replication.php:293
 msgid "Slave SQL Thread not running!"
