Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:51+0200\n"
+"PO-Revision-Date: 2010-05-29 14:52+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5583,7 +5583,7 @@ msgstr "Nit IO samo %s"
 
 #: server_replication.php:332
 msgid "Error management:"
-msgstr ""
+msgstr "Upravljanje napak:"
 
 #: server_replication.php:334
 msgid "Skipping errors might lead into unsynchronized master and slave!"
