Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:52+0200\n"
+"PO-Revision-Date: 2010-05-29 14:53+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5588,6 +5588,8 @@ msgstr "Upravljanje napak:"
 #: server_replication.php:334
 msgid "Skipping errors might lead into unsynchronized master and slave!"
 msgstr ""
+"Preskakovanje napak lahko vodi v nesinhroniziran glavni strežnik in "
+"podrejenec!"
 
 #: server_replication.php:336
 msgid "Skip current error"
