--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 14:55+0200\n"
+"PO-Revision-Date: 2010-05-29 14:56+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6987,7 +6987,7 @@ msgstr "Pustite prazno, če se ne uporablja"
 
 #: setup/lib/messages.inc.php:243
 msgid "Host authentication order"
-msgstr ""
+msgstr "Zaporedje overovitve gostitelja"
 
 #: setup/lib/messages.inc.php:244
 msgid "Leave blank for defaults"
